<resources>
    <string name="app_name">pclShop</string>
    <string name="pref_file">com.example.pclshop.PREFERENCE_FILE_KEY</string>
    <string name="pref_usuario_id"></string>
    <string name="pref_nombre"></string>
    <string name="pref_apellido"></string>
    <string name="pref_correo"></string>
    <string name="pref_contrasena"></string>

    <!-- Strings for the Home Ramita Jamt -->
    <string name="tvTitleHome">Productos</string>
    <string name="tvNombrePlaceholders">Nombre</string>
    <string name="tvCorreoPlaceholders">Correo</string>
    <string name="btnPerfil">Perfil</string>
    <string name="btnLogout">Cerrar Sesión</string>
    <string name="tvTituloPerfil">Datos de Usuario</string>
    <string name="tvNombrePerfil">Nombre: </string>
    <string name="tvApellidoPerfil">Apellido: </string>
    <string name="tvCorreoPerfil">Correo: </string>
    <string name="btnRegresarPerfil">Regresar</string>

    <!-- Strings for the Home Ramita Isabel -->
    <string name="tvTituloLogin">Iniciar Sesión</string>
    <string name="tvTituloRegistro">Registro de Usuario</string>
    <string name="btnLoginLogin">Iniciar</string>
    <string name="btnRegistroLogin">Registrarse</string>
    <string name="tvPlaceholderCorreoLogin">Ingrese su correo</string>
    <string name="tvPlaceholderContraseñaLogin">Ingrese su contraseña</string>

    <string name="tvPlaceholderNombreRegister">Ingrese su nombre</string>
    <string name="tvPlaceholderApellidoRegister">Ingrese su apellido</string>
    <string name="tvPlaceholderCorreoRegister">Ingrese su correo</string>
    <string name="tvPlaceholderContrasenaRegister">Ingrese su contrasena</string>
    <string name="btnRegresarRegister">Regresar</string>
    <string name="btnRegistroRegister">Registrarse</string>

    <!-- Strings - Ramita Onuki -->
    //Aqui se agregan los strings que se van a utilizar en la vista de detalle de producto
    <string name="btnCarrito">Ir al Carrito</string>
    <string name="btnRegresar">Regresar</string>
    <string name="txt_nombre_producto">Nombre del Producto</string>
    <string name="txt_detalle_producto">Detalle Producto</string>
    <string name="txt_precio_producto">Precio: </string>
    <string name="btnAgregar">Agregar al Carrito</string>
    <string name="txt_precio">S/. </string>

    //Aqui se agregan los strings que se van a utilizar en la vista de carrito de compra
    <string name="txt_casi_terminas">¡Ya casi terminas!</string>

</resources>