<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorTextSecondary"
    tools:context=".DetalleProducto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTextSecondary"
            android:text="@string/btnRegresar"
<<<<<<< Updated upstream
            android:textSize="20sp" />
=======
            android:textSize="16sp"
            android:onClick="onRegresarButtonClick" />
>>>>>>> Stashed changes

        <Button
            android:id="@+id/btnCarrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTitle"
            android:drawableLeft="@drawable/icon_carrito"
            android:text="@string/btnCarrito"
            android:textColor="@color/colorText"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/txt_nombre_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_nombre_producto"
            android:textAlignment="center"
            android:textColor="@color/colorButton"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_detalle_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/txt_detalle_producto"
            android:textStyle="bold"
            android:textColor="@color/colorTextSecondary"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="1dp">


        <TextView
            android:id="@+id/txt_precio_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/txt_precio_producto"
            android:textColor="@color/colorText"
            android:layout_marginLeft="15dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/txt_precio"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorTitle"
            android:text="@string/btnAgregar"
            android:drawableLeft="@drawable/icon_carrito"
            android:textColor="@color/colorText"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="1dp">

        <ImageView
            android:id="@+id/imageProducto"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:layout_margin="5dp"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>