<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvNombreHombe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tvNombrePlaceholders"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/tvCorreoHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/tvCorreoPlaceholders"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/colorTitle"
                android:text="@string/btnPerfil"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:iconTint="@color/colorAccent"
                app:rippleColor="@color/colorButton"
                tools:ignore="VisualLintButtonSize" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorTextSecondary"
                android:fontFamily="sans-serif-medium"
                android:layout_marginEnd="20dp"
                android:text="@string/btnLogout"
                android:textColor="@color/colorBackground"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/tvTitleProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/tvTitleHome"
            android:textAlignment="center"
            android:textColor="@color/colorButton"
            android:textSize="48sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAllProducts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>